# space

./: .gitattributes  .gitignore  .golangci.yml  .markdownlint.json  Makefile  README.md  Taskfile.yml  clippy.toml  eslint.config.js  go.work  go.work.sum  requirements
.zap/: rules.tsv
api/: go.mod  go.sum
bench/: Taskfile.yml
bench/k6/: iam-login.bench.js  realtime-fanout.bench.js  scaffold.bench.js
compliance/: itar-paths.txt  ropa.md
compliance/controls/: certin.csv  fedramp-mod.csv  gdpr.csv  iso27001.csv  itar.csv  schema.json  soc2.csv
compliance/dpia/: README.md  template.md
compliance/policies/: README.md
compute/: Cargo.toml  clippy.toml
compute/.cargo/: config.toml
compute/crates/adcs-actuators/src/: reaction_wheel.rs
compute/crates/adcs-control/src/: lqr.rs  mpc.rs  pid.rs
compute/crates/adcs-ekf/src/: generic.rs  mekf.rs
compute/crates/adcs-ukf/src/: lib.rs
compute/crates/cdh-ccsds/: Cargo.toml
compute/crates/cdh-ccsds/src/: tm_frame.rs
compute/crates/cdh-edac/: Cargo.toml
compute/crates/cdh-edac/src/: hamming.rs  lib.rs
compute/crates/cdh-fs/src/: lib.rs
compute/crates/eo-atmos-corr/: Cargo.toml
compute/crates/eo-atmos-corr/src/: lib.rs
compute/crates/eo-atmos-corr/tests/: wrapper.rs
compute/crates/eo-geometric/: Cargo.toml
compute/crates/eo-geometric/src/: dem.rs  lib.rs  ortho.rs  resample.rs  rpc.rs
compute/crates/eo-indices/: Cargo.toml
compute/crates/eo-indices/examples/: compute_all.rs
compute/crates/eo-indices/src/: evi.rs  lib.rs  ndvi.rs  ndwi.rs  savi.rs
compute/crates/eo-indices/tests/: integration.rs
compute/crates/eo-mosaic/: Cargo.toml
compute/crates/eo-mosaic/src/: blend.rs  lib.rs  mosaic.rs  overlap.rs  seamline.rs
compute/crates/eo-pansharpen/: Cargo.toml
compute/crates/eo-pansharpen/examples/: kernels.rs
compute/crates/eo-pansharpen/src/: brovey.rs  gs.rs  hist_match.rs  ihs.rs  lib.rs  pca.rs
compute/crates/eo-radiometric/: Cargo.toml
compute/crates/eo-radiometric/examples/: landsat8_pipeline.rs
compute/crates/eo-radiometric/src/: lib.rs
compute/crates/eo-radiometric/tests/: integration.rs
compute/crates/eo-sar/: Cargo.toml
compute/crates/eo-sar/src/: lib.rs  multilook.rs  polarimetric.rs  speckle.rs
compute/crates/eps-battery/: Cargo.toml
compute/crates/eps-battery/src/: lib.rs
compute/crates/eps-power/src/: eclipse.rs  mppt.rs
compute/crates/gi-abi/: Cargo.toml
compute/crates/gi-abi/src/: lib.rs
compute/crates/gi-export/: Cargo.toml
compute/crates/gi-export/src/: lib.rs
compute/crates/gi-fusion-eng/: Cargo.toml
compute/crates/gi-fusion-eng/src/: lib.rs
compute/crates/gi-report-render/: Cargo.toml
compute/crates/gi-report-render/src/: lib.rs
compute/crates/gi-tile-render/: Cargo.toml
compute/crates/gi-tile-render/src/: lib.rs
compute/crates/gs-antenna/: Cargo.toml
compute/crates/gs-antenna/src/: lib.rs
compute/crates/gs-bit-sync/: Cargo.toml
compute/crates/gs-bit-sync/src/: lib.rs
compute/crates/gs-doppler/: Cargo.toml
compute/crates/gs-doppler/src/: lib.rs
compute/crates/gs-fec/: Cargo.toml
compute/crates/gs-fec/src/: convolutional.rs  lib.rs  reed_solomon.rs
compute/crates/gs-pass-pred/: Cargo.toml
compute/crates/gs-pass-pred/src/: lib.rs
compute/crates/gs-rf-driver/: Cargo.toml
compute/crates/gs-rf-driver/src/: lib.rs
compute/crates/gs-tle/: Cargo.toml
compute/crates/gs-tle/src/: lib.rs
compute/crates/orbit-prop/: Cargo.toml
compute/crates/orbit-prop/src/: integrators.rs  lib.rs  sgp4_prop.rs
compute/crates/sim-harness/: Cargo.toml
compute/crates/sim-harness/src/: lib.rs
compute/crates/sim-physics/: Cargo.toml
compute/crates/sim-physics/src/: drag.rs  gravity.rs  integrator.rs  lib.rs  rigid_body.rs  srp.rs
deploy/: README.md
deploy/docker/: docker-compose.yaml
docs/: PLAN.md  TODO.md
flight/: Cargo.toml
flight/crates/adcs-actuators/: Cargo.toml
flight/crates/adcs-actuators/src/: lib.rs  magnetorquer.rs  reaction_wheel.rs  thruster.rs
flight/crates/adcs-control/: Cargo.toml
flight/crates/adcs-control/src/: lib.rs  lqr.rs  smc.rs
flight/crates/adcs-ekf/: Cargo.toml
flight/crates/adcs-ekf/src/: lib.rs
flight/crates/adcs-ukf/: Cargo.toml
flight/crates/cdh-ccsds/src/: crc.rs  lib.rs  spp.rs  tc_frame.rs
flight/crates/cdh-edac/src/: scrub.rs  secded64.rs
flight/crates/cdh-fs/: Cargo.toml
flight/crates/cdh-fs/src/: lib.rs
flight/crates/cdh-scheduler/: Cargo.toml
flight/crates/cdh-scheduler/src/: lib.rs
flight/crates/eps-battery/src/: lib.rs
flight/crates/eps-power/: Cargo.toml
flight/crates/eps-power/src/: budget.rs  lib.rs
infra/atlas/: atlas.hcl
infra/prometheus/: scrape.yaml
ml/workers/eo-ml-worker/: README.md  pyproject.toml
ml/workers/eo-ml-worker/src/eo_ml_worker/: __init__.py  handler.py  main.py
ml/workers/eo-ml-worker/tests/: test_worker.py
ml/workers/gi-ml-worker/: README.md  pyproject.toml
ml/workers/gi-ml-worker/src/gi_ml_worker/: __init__.py  handler.py  main.py
ml/workers/gi-ml-worker/tests/: test_worker.py
pkg/: go.mod  go.sum
pkg/authz/: authz.go  authz_test.go
pkg/closer/: closer.go  closer_test.go
pkg/config/: config.go  config_test.go
pkg/db/: db.go  db_test.go
pkg/errs/: errs.go  errs_test.go
pkg/httpserver/: httpserver.go  httpserver_test.go
pkg/ids/: ids.go  ids_test.go
pkg/middleware/: middleware.go  middleware_test.go
pkg/observability/: log.go  log_test.go  metrics.go  metrics_test.go
pkg/pagination/: pagination.go  pagination_test.go
pkg/validation/: validation.go  validation_test.go
plan/: design.md  requirements.md  todo.md
proto/: buf.gen.yaml  buf.yaml
services/: buf.yaml  go.work  go.work.sum
services/audit/: go.mod  go.sum
services/eo-analytics/: Dockerfile  go.mod  sqlc.yaml
services/eo-catalog/: Dockerfile  buf.gen.yaml  go.mod  go.sum  sqlc.yaml
services/eo-pipeline/: Dockerfile  go.mod  sqlc.yaml
services/export/: go.mod
services/gi-analytics/: Dockerfile  go.mod  go.sum
services/gi-fusion/: Dockerfile  (+1 more)
tools/: check-trace.sh
web/: package.json  pnpm-lock.yaml  turbo.json
(+854 files in other folders)
