[package]
name = "eo-geometric"
description = "Geometric correction: RPC forward/inverse projection, DEM-based orthorectification, resampling kernels."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"
many_single_char_names = "allow"
needless_range_loop = "allow"
cast_possible_wrap = "allow"

[dependencies]
ndarray = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
