[package]
name = "eo-indices"
description = "Vegetation and water spectral indices: NDVI, EVI, SAVI, NDWI."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
similar_names = "allow"

[dependencies]
ndarray = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
