[package]
name = "eps-battery"
description = "Battery state-of-charge (Coulomb counting + OCV correction) and state-of-health estimators."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
too_many_arguments = "allow"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
