[package]
name = "gi-abi"
description = "Activity-Based Intelligence: pattern-of-life baselining and Z-score anomaly detection on time-series observations."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
