[package]
name = "gs-antenna"
description = "Antenna pointing: program-track, auto-track, step-track controllers + slew-rate-limited az-el actuator model."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
