[package]
name = "gs-bit-sync"
description = "Bit & frame synchronization: NRZ-L correlation bit-sync, CCSDS attached sync marker frame correlator."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
needless_range_loop = "allow"
same_item_push = "allow"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
