[package]
name = "gs-fec"
description = "Forward Error Correction: Reed-Solomon over GF(256), rate-1/2 K=7 convolutional encoder, Viterbi decoder."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
needless_range_loop = "allow"
range_plus_one = "allow"
explicit_iter_loop = "allow"
same_item_push = "allow"

[dependencies]
reed-solomon = "0.2"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
