[package]
name = "gs-pass-pred"
description = "Satellite pass prediction: AOS / TCA / LOS for a TLE-defined satellite over a ground station with horizon mask."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"

[dependencies]
gs-tle = { path = "../gs-tle" }
nalgebra = { workspace = true }
orbit-prop = { path = "../orbit-prop" }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
