[package]
name = "gs-rf-driver"
description = "Driver registry for ground-station RF equipment (LNA / SSPA / synthesizer / IF down-converter) with abstract transport (SNMP / Modbus)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
elidable_lifetime_names = "allow"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
