[package]
name = "gs-tle"
description = "Ground-side TLE parsing and TEME→ECI/ECEF transforms with checksum validation."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"

[dependencies]
nalgebra = { workspace = true }
orbit-prop = { path = "../orbit-prop" }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
