[package]
name = "orbit-prop"
description = "Orbit propagation: SGP4 (via the sgp4 crate) plus generic RK4 and Dormand-Prince RK45 integrators for two-body / N-body dynamics."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
similar_names = "allow"
many_single_char_names = "allow"
doc_markdown = "allow"

[dependencies]
nalgebra = { workspace = true }
sgp4 = "2"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
